# Plug-and-Play-Collaboration-Between-Specialized-Tsetlin-Machines

./: .gitignore  README.md  pyproject.toml
examples/: example_1.py  example_2.py
examples/old/: CIFAR10AdaptiveThresholding.py  CIFAR10HistogramOfGradients.py
tests/: test_components.py
tmcomposite/: composite.py  config.py  tuner.py
tmcomposite/components/: adaptive_thresholding.py  base.py  color_thermometer_scoring.py  histogram_of_gradients.py
tmcomposite/components/image/: __init__.py  experimental.py
tmcomposite/gating/: base.py  linear_gate.py  neural_gate.py
